--- a/src/scaffold.scss
+++ b/src/scaffold.scss
@@ -20,6 +20,7 @@ $network-non-seed-gene-color: #143d1f;
 $network-seed-cancer-gene-color: #ff007f;
 $network-non-seed-cancer-gene-color: #5b005b;
 $network-selected-border-color: #ffa500;
+$cancernet-border-color: #9c0606;
 
 $legend-circle-size: 35px;
 $legend-rectangle-height: 25px;
