--- a/src/app/pages/explorer-page/components/analysis-panel/analysis-panel.component.scss
+++ b/src/app/pages/explorer-page/components/analysis-panel/analysis-panel.component.scss
@@ -7,6 +7,9 @@
   min-width: calc(100vw - #{$sidebar-width-max});
   right: 0;
   top: $navbar-height;
+  &.analysisFullscreen{
+    width: 100vw;
+  }
 }
 
 div.network {
