remove in cancernet visuals for submission

--- a/src/app/pages/explorer-page/components/network/network.component.html
+++ b/src/app/pages/explorer-page/components/network/network.component.html
@@ -55,10 +55,10 @@
               &nbsp;ATC Class L
             </td>
           </tr>
-          <tr *ngIf="networkType === 'analysis' && target === 'drug'">
+          <!-- <tr *ngIf="networkType === 'analysis' && target === 'drug'">
             <td><span class="cancernet-node">label</span></td>
             <td>&nbsp;Drug in Cancernet</td>
-          </tr>
+          </tr> -->
         </table>
       </div>
       <!-- END Legend -->
