--- a/src/app/components/cancernet-panel/cancernet-panel.component.html
+++ b/src/app/components/cancernet-panel/cancernet-panel.component.html
@@ -4,7 +4,7 @@
     <header class="modal-card-head">
       <p class="modal-card-title">
         <span class="icon"><i class="fa fa-dna"></i></span>
-        Cancernet information for {{ _drug.name }}
+        CanceRx information for {{ _drug.name }}
       </p>
       <button (click)="close()" class="delete" aria-label="close"></button>
     </header>
