--- a/src/app/pages/explorer-page/components/analysis-panel/analysis-panel.component.html
+++ b/src/app/pages/explorer-page/components/analysis-panel/analysis-panel.component.html
@@ -435,13 +435,13 @@
                 class="has-tooltip"
                 data-tooltip="ATC Class L (Antineoplastic or Immunomodulating Agents)"
               >
-                Antineoplastic or Immunomod.
+                ATC L
                 <p-sortIcon
                   [field]="'isAtcAntineoplasticAndImmunomodulatingAgent'"
                 ></p-sortIcon>
               </th>
               <th [pSortableColumn]="'inCancernet'">
-                In Cancernet
+                CanceRx
                 <p-sortIcon [field]="'inCancernet'"></p-sortIcon>
               </th>
               <th *ngIf="tableHasScores" [pSortableColumn]="'score'">
