--- a/src/app/pages/explorer-page/components/sidebar/components/info-tile/info-tile.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/components/info-tile/info-tile.component.html
@@ -349,7 +349,7 @@
       </p>
 
       <p>
-        <b>In Cancernet: </b>
+        <b>In CanceRx: </b>
         <span class="icon is-small">
           <i
             class="fas"
