--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -25,7 +25,7 @@
           (visibleTab)="visibleAnalysisTab = $event"
         >
         </app-analysis-panel>
-        <!-- A modal to display the cancernet information for one drug -->
+        <!-- A modal to display the caCanceRxncernet information for one drug -->
       </div>
     </div>
   </div>
