--- a/src/app/pages/documentation-page/documentation-page.component.html
+++ b/src/app/pages/documentation-page/documentation-page.component.html
@@ -258,10 +258,9 @@
               <b>Degree Centrality:</b> Degree centrality measurement is
               obtained by ranking the nodes in a network based on their degree,
               which is defined as the number of neighbors a node has divided by
-              the number of nodes. Its normalized form, which is implemented in
-              CADDIE, can be described as
+              the number of nodes. It be described as
               <div class="documentation-formula">
-                <i>centrality<sub>degree</sub>(x) = deg(x) / n − 1</i>
+                <i>centrality<sub>degree</sub>(x) = deg(x)</i>
               </div>
               where x is a given node and deg(x) is its degree. While it is a
               <a
@@ -282,17 +281,16 @@
               <b>Harmonic Centrality:</b> Harmonic centrality measurement can be
               described as the average shortest distance from each node to all
               other nodes in a network. This measurement is the equivalent of
-              closeness centrality for disconnected graphs. For comparable
-              results, the normalized version was used. Formally speaking, it
+              closeness centrality for disconnected graphs. Formally speaking, it
               can be annotated as
 
               <div class="documentation-formula">
                 <i>centrality<sub>harmonic</sub>(x) = </i>&sum;<sub
                   >y&#x2260;x</sub
-                ><sup>y</sup>( (n − 1) / dist(x, y) )
+                ><sup>y</sup>( 1 / dist(x, y) )
               </div>
 
-              where x is a given node and n − 1/dist(x, y) = 0 if dist(x, y) = ∞
+              where x is a given node and 1/dist(x, y) = 0 if dist(x, y) = ∞
               (<a
                 href="https://www.semanticscholar.org/paper/Closeness-Centrality-Extended-to-Unconnected-the-Rochat/a4ea7b92421415674c6ed954914f0512935d0dfb"
                 target="_blank"
