add stuff to documentation

--- a/src/app/pages/documentation-page/documentation-page.component.html
+++ b/src/app/pages/documentation-page/documentation-page.component.html
@@ -170,6 +170,14 @@
             side bar.
           </p>
 
+          <div class="container has-text-centered">
+            <img
+              src="assets/Upload Genes Manual.png"
+              alt="Upload a list of genes to CADDIE"
+              title="Upload a list of genes to CADDIE"
+            />
+          </div>
+          
           <a id="documentation-algorithms"></a>
 
           <h4 class="title is-4">Algorithms</h4>
