--- a/src/app/pages/explorer-page/components/sidebar/components/dataset-tile/dataset-tile.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/components/dataset-tile/dataset-tile.component.html
@@ -7,7 +7,7 @@
       >
                  <!-- [groupBy]="groupingHelper" -->
         <ng-template ng-option-tmp let-item="item">
-          {{item.version}} ({{item.count}})
+          {{item.name}} ({{item.count}})
         </ng-template>
       </ng-select>
     </div>
