--- a/src/app/pages/explorer-page/components/sidebar/sidebar.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/sidebar.component.html
@@ -662,7 +662,7 @@
         <a
           (click)="explorerData.showDiseaseSelectionDialog = true"
           class="card-footer-item has-text-primary"
-          data-tooltip="Add genes based on their occurance in diseases."
+          data-tooltip="Add genes based on their occurrence in diseases."
         >
           <span class="icon">
             <i class="fa fa-upload"></i>
