name to interaction dropdown

--- a/src/app/pages/explorer-page/components/sidebar/components/interaction-dataset-tile/interaction-dataset-tile.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/components/interaction-dataset-tile/interaction-dataset-tile.component.html
@@ -7,7 +7,7 @@
       >
                  <!-- [groupBy]="groupingHelper"> -->
         <ng-template ng-option-tmp let-item="item">
-          {{item.version}} ({{kFormatter(item.count)}})
+          {{item.name}} ({{kFormatter(item.count)}})
         </ng-template>
       </ng-select>
     </div>
