add article citation

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -58,6 +58,28 @@
           <br />
           <br />
           <div class="has-text-centered">
+            <h2>Citing</h2>
+          </div>
+          <p>
+            If you use CADDIE in your work, please cite the following article:
+          </p>
+
+          <p>
+            <i class="fa fa-feather"></i> URL:
+            <a href="https://doi.org/10.1093/nar/gkac384" target="_blank"
+              >https://doi.org/10.1093/nar/gkac384</a
+            >
+          </p>
+          <p>
+            Michael Hartung, Elisa Anastasi, Zeinab M Mamdouh, Cristian Nogales,
+            Harald H H W Schmidt, Jan Baumbach, Olga Zolotareva, Markus List,
+            Cancer driver drug interaction explorer, Nucleic Acids Research,
+            2022;, gkac384, https://doi.org/10.1093/nar/gkac384
+          </p>
+
+          <br />
+          <br />
+          <div class="has-text-centered">
             <h2>Contact Information</h2>
           </div>
           <p>
