--- a/src/app/pages/citation-page/citation-page.component.html
+++ b/src/app/pages/citation-page/citation-page.component.html
@@ -5,33 +5,29 @@
       <div class="column is-8 is-offset-2">
         <div class="container has-text-centered">
           <img src="assets/caddie_logo.png" alt="CADDIE logo" title="CADDIE logo" />
-          <h2 class="subtitle is-3"> A Coronavirus Explorer </h2>
+          <h2 class="subtitle is-3"> Cancer Driver Drug Interaction Explorer </h2>
         </div>
         <div class="content">
           <h2>Citation</h2>
           <p>
-            If you use CoVex in your work please reference it as follows:
+            If you use CADDIE in your work, please cite the following article:
           </p>
-          <pre>{{"﻿@Article{Sadegh2020,"}}
-{{"author={Sadegh, Sepideh and Matschinske, Julian and Blumenthal, David B. and Galindez, Gihanna and Kacprowski, Tim and List, Markus and Nasirigerdeh, Reza and Oubounyt, Mhaned and Pichlmair, Andreas and Rose, Tim Daniel and Salgado-Albarr{\'a}n, Marisol and Sp{\"a}th, Julian and Stukalov, Alexey and Wenke, Nina K. and Yuan, Kevin and Pauling, Josch K. and Baumbach, Jan},"}}
-{{"title={Exploring the SARS-CoV-2 virus-host-drug interactome for drug repurposing},"}}
-{{"journal={Nature Communications},"}}
-{{"year={2020},"}}
-{{"month={Jul},"}}
-{{"day={14},"}}
-{{"volume={11},"}}
-{{"number={1},"}}
-{{"pages={3518},"}}
-{{"issn={2041-1723},"}}
-{{"doi={10.1038/s41467-020-17189-2},"}}
-{{"url={https://doi.org/10.1038/s41467-020-17189-2}"}}
-{{"}"}}</pre>
 
-          Paper URL: <a href="https://www.nature.com/articles/s41467-020-17189-2">https://www.nature.com/articles/s41467-020-17189-2</a>
-
+          <p>
+            <i class="fa fa-feather"></i> URL:
+            <a href="https://doi.org/10.1093/nar/gkac384" target="_blank"
+              >https://doi.org/10.1093/nar/gkac384</a
+            >
+          </p>
+          <p>
+            Michael Hartung, Elisa Anastasi, Zeinab M Mamdouh, Cristian Nogales,
+            Harald H H W Schmidt, Jan Baumbach, Olga Zolotareva, Markus List,
+            Cancer driver drug interaction explorer, Nucleic Acids Research,
+            2022;, gkac384, https://doi.org/10.1093/nar/gkac384
+          </p>
           <h2>Source code</h2>
           <p>
-            The source code is available upon request: julian.matschinske_AT_wzw.tum.de
+            The source code is available here: <a href="https://github.com/biomedbigdata">https://github.com/biomedbigdata</a>
           </p>
         </div>
       </div>
