bugfix: analysis z index was preventing scrolling in sidebar

--- a/src/app/pages/explorer-page/components/analysis-panel/analysis-panel.component.scss
+++ b/src/app/pages/explorer-page/components/analysis-panel/analysis-panel.component.scss
@@ -7,6 +7,7 @@
   min-width: calc(100vw - #{$sidebar-width-max});
   right: 0;
   top: $navbar-height;
+  z-index: 30;
   &.analysisFullscreen{
     width: 100vw;
   }
