--- a/src/app/pages/explorer-page/components/network/network.component.html
+++ b/src/app/pages/explorer-page/components/network/network.component.html
@@ -219,7 +219,7 @@ that revolve around the network."
           [elements]="analysis.getDrugStatus()"
           (callbackFun)="toggleDrugs($event)"
           label="Drugs"
-          class="overlay"
+          class="overlay footer-buttons"
         ></app-category-selector>
 
         <app-category-selector
@@ -230,7 +230,7 @@ that revolve around the network."
           label="Expr. Tissue"
           class="footer-buttons is-inline-block has-tooltip"
           data-tooltip="Highlight the gene expression in GTEx tissues"
-          class="overlay"
+          class="overlay footer-buttons"
         ></app-category-selector>
 
         <app-category-selector
@@ -242,7 +242,7 @@ that revolve around the network."
           class="footer-buttons is-inline-block has-tooltip"
           data-tooltip="Highlight the gene expression
 in TCGA cancer types"
-          class="overlay"
+          class="overlay footer-buttons"
         ></app-category-selector>
 
         <app-category-selector
@@ -256,7 +256,7 @@ in TCGA cancer types"
           class="footer-buttons is-inline-block has-tooltip"
           data-tooltip="Highlight the cancer mutations
 in TCGA cancer types"
-          class="overlay"
+          class="overlay footer-buttons"
         ></app-category-selector>
 
         <app-toggle
