--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,14 @@
           <span>Home</span>
         </a>
         <a
+          routerLink="/simple"
+          routerLinkActive="is-active"
+          class="navbar-item is-hoverable"
+        >
+          <span class="icon"><i class="fa fa-capsules"></i></span>
+          <span>Drug Search</span>
+        </a>
+        <a
           routerLink="/explorer"
           routerLinkActive="is-active"
           class="navbar-item is-hoverable"
