--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -22,10 +22,16 @@
       -->
 
       <div class="button-box">
-        <button class="button has-text-info is-large  ">
+        <button class="button has-text-primary is-large">
+          <a routerLink="/simple" routerLinkActive="is-active">
+            <span class="icon"><i class="fa fa-capsules has-text-primary"></i></span>
+            <span>Quick Drug Search</span>
+          </a>
+        </button>
+        <button class="button has-text-primary is-large">
           <a routerLink="/explorer" routerLinkActive="is-active">
-            <span class="icon"><i class="fa fa-project-diagram has-text-info"></i></span>
-            <span>Start App</span>
+            <span class="icon"><i class="fa fa-project-diagram has-text-primary"></i></span>
+            <span>Explore</span>
           </a>
         </button>
       </div>
