--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -23,6 +23,9 @@ div.scroll {
 .button-box {
   margin-top: 40px;
   margin-bottom: 40px;
+  .button {
+    margin: 10px;
+  }
 }
 
 .video-container {
