--- a/src/app/pages/explorer-page/components/network/network.component.html
+++ b/src/app/pages/explorer-page/components/network/network.component.html
@@ -1,4 +1,4 @@
-<div class="caddie network" #network_container>
+<div class="caddie network {{networkType}}" #network_container>
   <div class="card network" id="network-card" [ngClass]="{analysis: networkType==='analysis'}">
     <!-- <header class="card-header">
       <p class="card-header-title">Gene-Gene Interaction Network</p>
@@ -111,7 +111,7 @@
 
       <!-- START Legend -->
       <!-- <div
-        *ngIf="networkType === 'basic'"
+        *ngIf="networkType !== 'analysis'"
         class="legend main"
         [ngClass]="{
           'pushed-left':
@@ -141,7 +141,7 @@
       <!-- <div
         class="legend main gradient"
         *ngIf="
-          (networkType === 'basic' &&
+          (networkType !== 'analysis' &&
             explorerData.activeNetwork.selectedMutationCancerType) ||
           explorerData.activeNetwork.selectedExpressionCancerType ||
           selectedTissue
@@ -183,6 +183,7 @@
       <footer class="card-footer toolbar network-footer-container">
 
         <app-button
+        *ngIf="networkType !== 'simpleAnalysis' && networkType !== 'simple'"
         buttonText="Menu"
         (callbackFun)="explorerData.showNetworkMenuDialog = !explorerData.showNetworkMenuDialog"
         icon="fa fa-cogs"
@@ -193,6 +194,7 @@ that revolve around the network."
       </app-button>
 
       <app-button
+      *ngIf="networkType !== 'simpleAnalysis'"
       buttonText="Upload Genes"
       (callbackFun)="explorerData.showCustomGenesDialog = !explorerData.showCustomGenesDialog"
       icon="fa fa-upload"
@@ -223,6 +225,7 @@ that revolve around the network."
         ></app-category-selector>
 
         <app-category-selector
+          *ngIf="networkType !== 'simpleAnalysis'"
           [expanded]="expressionExpanded"
           [selectedElement]="selectedTissue"
           [elements]="analysis.getTissues()"
@@ -234,6 +237,7 @@ that revolve around the network."
         ></app-category-selector>
 
         <app-category-selector
+          *ngIf="networkType !== 'simpleAnalysis'"
           [expanded]="expressionExpanded"
           [selectedElement]="selectedExpressionCancerType"
           (callbackFun)="selectExpressionCancerType($event)"
@@ -246,6 +250,7 @@ in TCGA cancer types"
         ></app-category-selector>
 
         <app-category-selector
+          *ngIf="networkType !== 'simpleAnalysis'"
           [expanded]="mutationCancerTypesExpanded"
           [selectedElement]="
             explorerData.activeNetwork.selectedMutationCancerType
